<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_24dp"
        android:title="search"
        />

    <item
        android:id="@+id/menu_debut"
        app:showAsAction="never"
        android:title="Début"
        />

    <item
        android:id="@+id/menu_fin"
        app:showAsAction="never"
        android:title="Fin"
        />

    <item
        android:id="@+id/menu_reinitialiser"
        app:showAsAction="never"
        android:title="Réinitialiser"
        />

</menu>