...
                android:text="07/09/2001"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="75dp"
                app:layout_constraintTop_toBottomOf="@id/nameHourLocation_meeting" />

            <ImageView
                android:id="@+id/trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="23dp"
...
